# goph419_F2024_Lab01_stZM

./: README.md  pyproject.toml
examples/: Lab1functions.py
src/lab01/: __init__.py  func01.py
