[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lab01"
version = "0.0.1"
authors = [
    { name="Zoe Mitchell", email="zoe.mitchell@ucalgary.ca"},
]
description="GOPH 419 Lab01"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3",
]
[project.urls]
"Homepage" = "https://github.com/Zcmitchell04/goph419_F2024_Lab01_stZM"